frontend/test/should_fail/keepOneForEach_match_class_unknown_accumulation_entity.grg
match class mc
{
	def var i:int;
	def var j:int;
} \ keepOneForEach<i>Accumulate<k>By<sum>
